--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes"/>
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=10.0, minimum-scale=1, user-scalable=1"/>
-	<title>Tarot</title>
+	<title>Web App Template</title>
 	<script type="text/javascript" src="lib/jquery-3.2.0.min.js"></script>
 	<script type="text/javascript" src="js/Model.min.js"></script>
 	<script type="text/javascript" src="js/View.min.js"></script>
@@ -28,6 +28,8 @@
 		<div class="page hidden" id="settings">
 			<h3>Settings</h3>
 		</div>
+
+		<div id="close-nav"></div>
 	</div>
 
 	<script type="text/javascript">
