--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
 		<div id="header">
 			<h2>Title</h2>
 			<i class="icon-bars burger"></i>
+			<i class="icon-cog cog"></i>
 		</div>
 
 		<div class="page show" id="dashboard">
 			<h3>My Dashboard</h3>
 		</div>
 
-		<div class="page hidden" id="settings">
+		<div class="page hidden dark" id="settings">
 			<h3>Settings</h3>
 		</div>
 
