--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 	<script type="text/javascript" src="js/min/Controller.min.js"></script>
 </head>
 <body>
-	<div id="nav-menu">
-	</div>
+	<div id="nav-menu"></div>
 
 	<div id="viewport">
 		<div id="header">
@@ -29,6 +28,11 @@
 			<p>Quis commodo odio aenean sed adipiscing diam donec adipiscing tristique. A iaculis at erat pellentesque adipiscing commodo elit at imperdiet. Rutrum quisque non tellus orci ac auctor. Tortor at auctor urna nunc id cursus metus aliquam eleifend. Proin libero nunc consequat interdum varius sit amet mattis. Malesuada fames ac turpis egestas maecenas pharetra convallis posuere. Egestas dui id ornare arcu. Volutpat ac tincidunt vitae semper quis lectus nulla at volutpat. Facilisis leo vel fringilla est ullamcorper eget nulla facilisi etiam. Faucibus purus in massa tempor nec feugiat nisl pretium fusce. Quisque egestas diam in arcu. Vel pretium lectus quam id leo. Iaculis at erat pellentesque adipiscing commodo elit at imperdiet. Interdum velit laoreet id donec ultrices. Euismod lacinia at quis risus sed. Quam vulputate dignissim suspendisse in est ante in nibh mauris.</p>
 			<p>Placerat orci nulla pellentesque dignissim enim sit. Nunc sed blandit libero volutpat sed cras. Eu volutpat odio facilisis mauris sit amet massa vitae. Consectetur purus ut faucibus pulvinar. Volutpat sed cras ornare arcu dui vivamus arcu. Eu facilisis sed odio morbi quis. Platea dictumst quisque sagittis purus sit. Donec massa sapien faucibus et molestie ac. Ut pharetra sit amet aliquam id diam maecenas. A diam sollicitudin tempor id eu nisl nunc mi ipsum. Mauris rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar. Vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt lobortis. Eros donec ac odio tempor orci dapibus ultrices in. Consectetur adipiscing elit duis tristique sollicitudin. Convallis tellus id interdum velit. Gravida neque convallis a cras semper auctor neque. Aliquam malesuada bibendum arcu vitae. Sed tempus urna et pharetra pharetra massa. Sed viverra ipsum nunc aliquet bibendum enim.
 			<p>Dolor sit amet consectetur adipiscing elit duis tristique. Tempus quam pellentesque nec nam aliquam. Duis tristique sollicitudin nibh sit amet commodo nulla facilisi nullam. Id volutpat lacus laoreet non curabitur gravida. Diam quis enim lobortis scelerisque fermentum dui faucibus in ornare. Ac tincidunt vitae semper quis lectus nulla at. Tortor at risus viverra adipiscing at in tellus. Non tellus orci ac auctor augue mauris augue. Urna nunc id cursus metus aliquam eleifend. Neque aliquam vestibulum morbi blandit cursus risus at ultrices mi. Ipsum nunc aliquet bibendum enim. Integer vitae justo eget magna fermentum iaculis eu non diam.
+		</div>
+
+		<div class="page hidden dark" id="sample">
+			<h3 class="enoch-mono">The First Key</h3>
+			<p class="enoch-mono">hadaij htaoh dam ocon odriz pal egroz aac elcic odo narmaz do ac eracaz naoav do lomaip paip at iaa apgob do lamaop dmoz pev olohol sd simapi ul mapi abos hot moh sd lipdai onog anda azrnz mzraf halip handaj mre bac gsnernoz sd rip abac aleroho mrasac masrg helobo sbru sd idla egrp pnong liht abos neiz holbon at hammoc do zmiz aohton aaq qloh sd grplam at aarg daspzan at i ror loz arbos ohpnov zlac hsnal tlab dai ohog gsrov fnos lo</p>
 		</div>
 
 		<div class="page hidden dark" id="settings">
