--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			<i class="icon-bars burger"></i>
 			<i class="icon-cog cog"></i>
 		</div>
+		<div class="page show dark" id="blank"></div>
 
 		<div class="page hidden dark" id="dashboard">
 			<h3>My Dashboard</h3>
