--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=10.0, minimum-scale=1, user-scalable=1"/>
 	<title>Web App Template</title>
-	<link rel="stylesheet" href="css/min/style.min.css">
+	<link rel="stylesheet" href="css/min/template.min.css">
 	<link rel="stylesheet" href="fonts/icomoon/style.css">
 	<script type="text/javascript" src="lib/jquery-3.2.0.min.js"></script>
 	<script type="text/javascript" src="js/min/Model.min.js"></script>
