--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
 		</div>
 
 		<div class="page hidden dark" id="sample">
-			<h3 class="enoch-mono">The First Key</h3>
-			<p class="enoch-mono">hadaij htaoh dam ocon odriz pal egroz aac elcic odo narmaz do ac eracaz naoav do lomaip paip at iaa apgob do lamaop dmoz pev olohol sd simapi ul mapi abos hot moh sd lipdai onog anda azrnz mzraf halip handaj mre bac gsnernoz sd rip abac aleroho mrasac masrg helobo sbru sd idla egrp pnong liht abos neiz holbon at hammoc do zmiz aohton aaq qloh sd grplam at aarg daspzan at i ror loz arbos ohpnov zlac hsnal tlab dai ohog gsrov fnos lo</p>
+			<h3 class="enoch-mono page-title"><bdo dir="rtl">The First Key</bdo></h3>
+			<span class="enoch-mono page-content">
+				<p class="rtl"><bdo dir="rtl">ol sonf vorsg goho iad balt lansh calz vonpho sobra zol ror i ta nazpsad graa ta malprg ds holq qaa nothoa zimz od commah ta nobloh zien soba thil gnonp prge aldi ds urbs oboleh grsam casarm ohorela caba pir ds zonrensg cab erm jadnah pilah farzm znrza adna gono iadpil ds hom toh soba ipam lu ipamis ds loholo vep zomd poamal od bogpa aai ta piap piamol od vaoan zacare ca od zamran odo cicle caa zorge lap zirdo noco mad hoath jiadah</bdo></p>
+			</span>
 		</div>
 
 		<div class="page hidden dark" id="settings">
