custom checkbox styles

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
 
 		<div class="page hidden dark" id="settings">
 			<h3>Settings</h3>
+			<form name="settings">
+				<input type="checkbox" id="hdr-font">
+				<label for="hdr-font">Enochian headings</label>
+			</form>
 		</div>
 
 		<div id="close-nav"></div>
