minor style changes

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<div class="page hidden dark" id="sample">
 			<h3 class="enoch-mono always page-title"><bdo dir="rtl">The First Key</bdo></h3>
 			<span class="enoch-mono page-content">
-				<p class="rtl"><bdo dir="rtl">ol sonf vorsg goho iad balt lansh calz vonpho sobra zol ror i ta nazpsad graa ta malprg ds holq qaa nothoa zimz od commah ta nobloh zien soba thil gnonp prge aldi ds urbs oboleh grsam casarm ohorela caba pir ds zonrensg cab erm jadnah pilah farzm znrza adna gono iadpil ds hom toh soba ipam lu ipamis ds loholo vep zomd poamal od bogpa aai ta piap piamol od vaoan zacare ca od zamran odo cicle caa zorge lap zirdo noco mad hoath jiadah</bdo></p>
+				<p class="rtl"><bdo dir="rtl">ol sonf vorsg goho iad balt lansh calz vonpho sobra zol ror i ta nazpsad graa ta malprg ds holq qaa nothoa zimz od commah ta nobloh zien soba thil gnonp prge aldi ds urbs oboleh grsam casarm ohorela caba pir ds zonrensg cab erm jadnah pilah farzm znrza adna gono iadpil ds hom toh soba ipam lu ipamis ds loholo vep zomd poamal od bogpa aai ta piap piamol od vaoan zacare ca od zamran odo cicle caa zorge lap zirdo noco mad hoath jaidah</bdo></p>
 			</span>
 		</div>
 
