--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
 				<div class="swatch-group" id="swatch-purple" data-theme="purple">
 					<div class="swatch" style="background-color:#985993;"></div><div class="swatch" style="background-color:#863D80;"></div><div class="swatch" style="background-color:#74276D;"></div><div class="swatch" style="background-color:#590952;"></div>
 				</div>
+				<div class="swatch-group" id="swatch-blue" data-theme="blue">
+					<div class="swatch" style="background-color:#785D97;"></div><div class="swatch" style="background-color:#614385;"></div><div class="swatch" style="background-color:#4D2D73;"></div><div class="swatch" style="background-color:#2B0C4F;"></div>
+				</div>
 				<a href="javascript:0;" id="clear-settings">Clear Settings</a>
 			</form>
 		</div>
