--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 	<link rel="stylesheet" href="fonts/icomoon/style.css">
 	<script type="text/javascript" src="lib/jquery-3.2.0.min.js"></script>
 	<script type="text/javascript" src="js/min/Model.min.js"></script>
+	<script type="text/javascript">
+		// apply saved settings
+		M.load_settings();
+		M.pages.settings.change_theme( M.settings.theme );
+	</script>
 	<script type="text/javascript" src="js/min/View.min.js"></script>
 	<script type="text/javascript" src="js/min/Controller.min.js"></script>
 </head>
