--- a/index.html
+++ b/index.html
@@ -47,6 +47,26 @@
 
 		<div class="page hidden dark" id="subpage">
 			<h3>Sub-Page</h3>
+			<div class="icon-grid">
+				<div class="grid-icon"><span class="tall-num">I</span></div>
+				<div class="grid-icon"><span class="tall-num">II</span></div>
+				<div class="grid-icon"><span class="tall-num">III</span></div>
+				<div class="grid-icon"><span class="tall-num">IV</span></div>
+				<div class="grid-icon"><span class="tall-num">V</span></div>
+				<div class="grid-icon"><span class="tall-num">VI</span></div>
+				<div class="grid-icon"><span class="tall-num">VII</span></div>
+				<div class="grid-icon"><span class="tall-num">VIII</span></div>
+				<div class="grid-icon"><span class="tall-num">IX</span></div>
+				<div class="grid-icon"><span class="tall-num">X</span></div>
+				<div class="grid-icon"><span class="tall-num">XI</span></div>
+				<div class="grid-icon"><span class="tall-num">XII</span></div>
+				<div class="grid-icon"><span class="tall-num">XIII</span></div>
+				<div class="grid-icon"><span class="tall-num">XIV</span></div>
+				<div class="grid-icon"><span class="tall-num">XV</span></div>
+				<div class="grid-icon"><span class="tall-num">XVI</span></div>
+				<div class="grid-icon"><span class="tall-num">XVII</span></div>
+				<div class="grid-icon"><span class="tall-num">XVIII</span></div>
+			</div>
 		</div>
 
 		<div class="page hidden dark" id="sample">
