--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 	<div id="viewport">
 		<div id="header">
-			<h2>Title</h2>
+			<h2>Dashboard</h2>
 			<i class="icon-bars burger"></i>
 			<i class="icon-cog cog"></i>
 		</div>
